--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="favicon.ico">
     <script src="main.js" defer></script>
     <title>New Years Timer</title>
   </head>
