Added automatic year change and message for the day

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>New Years Timer</title>
   </head>
   <body>
-    <h1>Time Until New Years</h1>
+    <h1 id="message">Time Until New Years</h1>
 
     <div class="countdown-container">
       <div class="count-el months-c">
@@ -31,7 +31,6 @@
         <p class="big-text" id="seconds">0</p>
         <span>seconds</span>
       </div>
-
     </div>
   </body>
 </html>
