--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>New Years Timer</title>
   </head>
   <body>
+  	<video autoplay muted loop id="myVideo" >
+  		<source src="Star.mp4" type="video/mp4">
+  	</video>
     <h1 id="message">Time Until New Years</h1>
 
     <div class="countdown-container">
